# fontsampler

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  config.yaml  fontsampler.py  fontsampler.spec  main.py  pixi.toml  pyproject.toml
.github/workflows/: benchmarks.yml
docs/: benchmarks.md
fontsampler/: __init__.py  __main__.py  cli.py  config.py  font_discovery.py  font_validation.py  incremental_pdf.py  logging_config.py  memory_utils.py  pdf_generation.py  streaming_processor.py  template_manager.py  warning_capture.py
templates/: css_template.css  html_template.jinja
tests/: test_large_collections.py
